// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFilterButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props grow can be turned off 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton euiFilterButton--noGrow"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props iconType and iconSide is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton euiFilterButton--hasIcon"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonEmpty__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props isDisabled is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props isSelected is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton euiFilterButton-isSelected"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props numActiveFilters and hasActiveFilters is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton euiFilterButton-hasActiveFilters"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props numFilters is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton euiFilterButton-hasNotification"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
    >
      <span
        class="euiFilterButton__textShift"
      />
      <span
        aria-label="5 available filters"
        class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFilterButton__notification"
      >
        5
      </span>
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props type is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton props withNext is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton euiFilterButton--withNext"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      <span
        class="euiFilterButton__textShift"
      />
    </span>
  </span>
</button>
`;

exports[`EuiFilterButton renders zero properly 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--iconRight euiFilterButton euiFilterButton-hasNotification testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
    >
      <span
        class="euiFilterButton__textShift"
      />
      <span
        aria-label="0 available filters"
        class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFilterButton__notification"
      >
        0
      </span>
    </span>
  </span>
</button>
`;
